@@ -3,8 +3,7 @@
       id="org.eclipse.linuxtools.profiling.feature"
       label="%featureName"
       version="0.1.0"
-      provider-name="%featureProvider"
-      os="linux">
+      provider-name="%featureProvider">
 
    <description>
       %description
@@ -17,6 +16,10 @@
    <license url="%licenseURL">
       %license
    </license>
+   
+   <url>
+      <update label="Linux Tools Update Site" url="http://download.eclipse.org/technology/linuxtools/update"/>
+   </url>
 
    <requires>
       <import plugin="org.eclipse.ui"/>
